# mashibar

./: .clang-format  compile_flags.txt  meson.build
include/: bar.hpp  client.hpp  module.hpp  utils.hpp
include/modules/: memory.hpp  user.hpp
src/: bar.cpp  client.cpp  main.cpp  module.cpp  utils.cpp
src/modules/: memory.cpp  user.cpp
